Revert "Extend async search keep alive (#67877)"
This reverts commit 244fc958bff679e1c2b37e0865521210459c27d0.